--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -117,7 +117,14 @@ Interesting to see how RN is used at the highest enterprise level on platforms w
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 🎥 [Matt Pocock \- Arrays, objects... now `composites`?](https://www.youtube.com/watch?v=hFenspfGLTk): The exciting JS proposal that replaces Records and Tuples.
+- 📜 [Introducing Rslib: Build library with Rspack](https://lib.rsbuild.dev/blog/introducing-rslib): Developed by ByteDance Web Infra Team, Rslib is a library that aims to be an ideal library development tool that is easy to configure, offers comprehensive features, leverages a shared ecosystem with application building, and prioritizes performance.
+- 📜 [shape(): A New Powerful Drawing Syntax in CSS](https://frontendmasters.com/blog/shape-a-new-powerful-drawing-syntax-in-css/): A new function of clip-path is now supported, which lets you to clip your element using arbitrary and responsive shapes.
+- 📜 [The CSS Height Enigma](https://www.joshwcomeau.com/css/height-enigma/)
+- 📜 [How V8 JavaScript Engine Works Behind the Scenes](https://www.deepintodev.com/blog/how-v8-javascript-engine-works-behind-the-scenes)
+- 📜 [The Art of Accessibility](https://playfulprogramming.com/collections/art-of-accessibility)
+- 📜 [Making a new form control \- with Custom Elements](https://plainvanillaweb.com/blog/articles/2025-05-09-form-control/)
+- 📦 [Lightning CSS 1.30 \- Relative color spec, nesting spec for pseudo elements](https://github.com/parcel-bundler/lightningcss/releases/tag/v1.30.0)
 
 ---
 
