--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -130,8 +130,8 @@ Interesting to see how RN is used at the highest enterprise level on platforms w
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/234/meme.png)](https://x.com/adamwathan/status/1922002165884682690)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/234/meme2.png)](https://x.com/Baconbrix/status/1922134704330854557)
 
 See ya! 👋
