--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+**Kacper and Tymek from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here. With a slightly quieter week, we come mostly with great articles we think you might like, alongside a few interesting releases\! We're so excited about the Vite team working on RSC support, a new React Query proposal, in conjunction with incoming features coming in React Native 0.80, but there are still many new topics here to look at.
+
+Let's dive in\!
 
 - 🗓 [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC2025&utm_source=TWIRpartnership&utm_content=savethedate) - 🇵🇱 Wrocław - 2-4 September. Star speaker announced! Get a 10% discount with code "TWIR".
 
