--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /234
 title: "This Week In React #234: ..."
-authors: [slorber]
+authors: [tboba, kacperkapusciak]
 date: 05-14-2025
 unlisted: true
 ---
@@ -103,7 +103,7 @@ Interesting to see how RN is used at the highest enterprise level on platforms w
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
 - 🐦 [mrdoob \- Honest question, why would anyone use Flutter instead of React Native?](https://x.com/mrdoob/status/1920861880911884771): Horizon broadening conversation between React Native and Flutter devs
 - 📜 [Expo \- Faster local dev with build cache providers (Experimental)](https://expo.dev/blog/build-cache-providers-in-expo): Reduced prebuild wait time by introducing remote build caching.
-- 📜 [React Native Legal: Zero-Config OSS License Screens for Your App](https://www.callstack.com/blog/react-native-legal-acknowledge-open-source-libraries-in-your-app?utm_campaign=Open_Source&utm_source=twitter&utm_medium=social&utm_content=post_13_05_2025): Recently, The Callstack team has launched React Native Legal \- a zero-config, cross-platform library, that handles license metadata generation and in-app display for you. Learn how not to get lost in reinventing the wheel and see how you can implement your own license list in just a few steps.
+- 📜 [React Native Legal: Zero-Config OSS License Screens for Your App](https://www.callstack.com/blog/react-native-legal-acknowledge-open-source-libraries-in-your-app?utm_campaign=Open_Source&utm_source=twitter&utm_medium=social&utm_content=post_13_05_2025): Recently, The Callstack team has launched React Native Legal \- a zero-config, cross-platform library, that handles license metadata generation and in-app display for you.
 - 📜 [Nightmare on Apple Street](https://byk.im/posts/apple-code-signing-x-platform/): Publishing your app to the App Store from the Linux could be a nightmare. Before you start trying it on your own, learn what are the hops and obstacles of pushing an iOS app from a Linux machine.
 - 📜 [New in Re.Pack 5.1: Preloading Remotes, Runtime Hooks, and Faster Startups](https://www.callstack.com/blog/new-in-re-pack-5-1): This time, Callstack shares with us a few interesting things, coming in the new version of Re.Pack. The release mainly focuses on a better Module Federation 2 support, thanks to the new `prefetchRemote` option, runtime hooks for ScriptManager and more.
 - 📦 [React Native 0.80 RC.1](https://github.com/facebook/react-native/releases/tag/v0.80.0-rc.1): The upcoming version of React Native is now in RC. TypeScript improvements with new [Strict API](https://github.com/react-native-community/discussions-and-proposals/blob/main/proposals/0894-deprecate-subpath-imports.md#parallel-effort-strict-typescript-api), support of radial gradient, React 19.1.
