--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /234
-title: "This Week In React #234: ..."
+title: "This Week In React #234: TanStack DB, TanStack Query, React Router, Redux Toolkit, Parcel | 0.80 RC, Expo, RN Legal, Re.Pack, Skia 2.0, Radon IDE, Rive RN | Rslib, Lightning CSS, shape(), Accessibility"
 authors: [tboba, kacperkapusciak]
 date: 05-14-2025
 unlisted: true
@@ -43,6 +43,8 @@ Learn how to identify and fix each of these (and more) in [the latest edition of
 A brand-new library from the TanStack team has been introduced in collaboration with ElectricSQL, which brings a lot of exciting features. It gives you a blazing fast query engine, fine-grained reactivity for minimal re-renders, robust transaction primitives and normalized data by default\!
 
 It is built on TanStack Store and is working with and alongside TanStack Query, which extends its capabilities with collections, live queries and optimistic mutations.
+
+---
 
 - 💸 [Build professional design system in less than a day, using Hope AI, new model by Bit.Cloud](https://bit.cloud/solutions/design-systems?utm_source=ThisWeekInReact&campaign=DesignSystem)
 - 👀 [React PR \- Integrate React RSC with Vite](https://github.com/facebook/react/pull/33152): An implementation of React Server Components support in Vite. There used to be a community proposal in the past but this time it's coming officially from the Vite team.
@@ -99,6 +101,8 @@ Chiara Mooney from Microsoft described how they use React Native to implement th
 They are using it in an island architecture which is a pattern embraced in the frontend ecosystem by the hybrid framework Astro.
 
 Interesting to see how RN is used at the highest enterprise level on platforms which aren't Android or iOS.
+
+---
 
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
 - 🐦 [mrdoob \- Honest question, why would anyone use Flutter instead of React Native?](https://x.com/mrdoob/status/1920861880911884771): Horizon broadening conversation between React Native and Flutter devs
