--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -36,7 +36,7 @@ Learn how to identify and fix each of these (and more) in [the latest edition of
 
 ## ⚛️ React {#react}
 
-[![TanStackDB](/emails/issues/234/tanstackdb.png)](https://github.com/TanStack/db)
+[![TanStackDB](/emails/issues/234/tanstackdb.jpg)](https://github.com/TanStack/db)
 
 **[TanStack DB](https://github.com/TanStack/db)**
 
