--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -12,8 +12,6 @@ Hi everyone!
 
 Let's dive in\!
 
-- 🗓 [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC2025&utm_source=TWIRpartnership&utm_content=savethedate) - 🇵🇱 Wrocław - 2-4 September. Star speaker announced! Get a 10% discount with code "TWIR".
-
 <!-- truncate -->
 
 import Support from "../_support.mdx";
@@ -105,7 +103,8 @@ Interesting to see how RN is used at the highest enterprise level on platforms w
 ---
 
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
-- 🐦 [mrdoob \- Honest question, why would anyone use Flutter instead of React Native?](https://x.com/mrdoob/status/1920861880911884771): Horizon broadening conversation between React Native and Flutter devs
+- 🐦 [mrdoob \- Honest question, why would anyone use Flutter instead of React Native?](https://x.com/mrdoob/status/1920861880911884771): Horizon broadening conversation between React Native and Flutter devs started by the Three.js creator.
+- 🗓 [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC2025&utm_source=TWIRpartnership&utm_content=savethedate) - 🇵🇱 Wrocław - 2-4 September. Star speaker announced! Get a 10% discount with code "TWIR".
 - 📜 [Expo \- Faster local dev with build cache providers (Experimental)](https://expo.dev/blog/build-cache-providers-in-expo): Reduced prebuild wait time by introducing remote build caching.
 - 📜 [React Native Legal: Zero-Config OSS License Screens for Your App](https://www.callstack.com/blog/react-native-legal-acknowledge-open-source-libraries-in-your-app?utm_campaign=Open_Source&utm_source=twitter&utm_medium=social&utm_content=post_13_05_2025): Recently, The Callstack team has launched React Native Legal \- a zero-config, cross-platform library, that handles license metadata generation and in-app display for you.
 - 📜 [Nightmare on Apple Street](https://byk.im/posts/apple-code-signing-x-platform/): Publishing your app to the App Store from the Linux could be a nightmare. Before you start trying it on your own, learn what are the hops and obstacles of pushing an iOS app from a Linux machine.
