--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -97,9 +97,9 @@ Enable Billing, drop in `<PricingTable/>` on your `/pricing` page and [start mon
 
 Chiara Mooney from Microsoft described how they use React Native to implement the newest Copilot features in their flagship MS Office suite used **by 600 million people**.
 
-They are using it in an island architecture which is a pattern embraced in the frontend ecosystem by the hybrid framework Astro.
+They are using it with the island architecture, a pattern embraced in the frontend ecosystem by frameworks such as Astro.
 
-Interesting to see how RN is used at the highest enterprise level on platforms which aren't Android or iOS.
+Interesting to see how RN is used at the highest enterprise level on platforms which aren't jusr Android or iOS.
 
 ---
 
