--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -99,18 +99,18 @@ Chiara Mooney from Microsoft described how they use React Native to implement th
 
 They are using it with the island architecture, a pattern embraced in the frontend ecosystem by frameworks such as Astro.
 
-Interesting to see how RN is used at the highest enterprise level on platforms which aren't jusr Android or iOS.
+Interesting to see how RN is used at the highest enterprise level on platforms which aren't just Android or iOS.
 
 ---
 
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
 - 🐦 [mrdoob \- Honest question, why would anyone use Flutter instead of React Native?](https://x.com/mrdoob/status/1920861880911884771): Horizon broadening conversation between React Native and Flutter devs started by the Three.js creator.
-- 🗓 [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC2025&utm_source=TWIRpartnership&utm_content=savethedate) - 🇵🇱 Wrocław - 2-4 September. Star speaker announced! Get a 10% discount with code "TWIR".
-- 📜 [Expo \- Faster local dev with build cache providers (Experimental)](https://expo.dev/blog/build-cache-providers-in-expo): Reduced prebuild wait time by introducing remote build caching.
-- 📜 [React Native Legal: Zero-Config OSS License Screens for Your App](https://www.callstack.com/blog/react-native-legal-acknowledge-open-source-libraries-in-your-app?utm_campaign=Open_Source&utm_source=twitter&utm_medium=social&utm_content=post_13_05_2025): Recently, The Callstack team has launched React Native Legal \- a zero-config, cross-platform library, that handles license metadata generation and in-app display for you.
+- 🗓 [React Universe Conf](https://www.reactuniverseconf.com/?utm_campaign=RUC2025&utm_source=TWIRpartnership&utm_content=savethedate) - 🇵🇱 Wrocław - 2-4 September. Star speakers announced! Get a 10% discount with code "TWIR".
+- 📜 [Expo \- Faster local dev with build cache providers (Experimental)](https://expo.dev/blog/build-cache-providers-in-expo): Use remote build caching to avoid recompiling the same code twice and ship faster.
 - 📜 [Nightmare on Apple Street](https://byk.im/posts/apple-code-signing-x-platform/): Publishing your app to the App Store from the Linux could be a nightmare. Before you start trying it on your own, learn what are the hops and obstacles of pushing an iOS app from a Linux machine.
-- 📜 [New in Re.Pack 5.1: Preloading Remotes, Runtime Hooks, and Faster Startups](https://www.callstack.com/blog/new-in-re-pack-5-1): This time, Callstack shares with us a few interesting things, coming in the new version of Re.Pack. The release mainly focuses on a better Module Federation 2 support, thanks to the new `prefetchRemote` option, runtime hooks for ScriptManager and more.
 - 📦 [React Native 0.80 RC.1](https://github.com/facebook/react-native/releases/tag/v0.80.0-rc.1): The upcoming version of React Native is now in RC. TypeScript improvements with new [Strict API](https://github.com/react-native-community/discussions-and-proposals/blob/main/proposals/0894-deprecate-subpath-imports.md#parallel-effort-strict-typescript-api), support of radial gradient, React 19.1.
+- 📦 [React Native Legal - Zero-Config OSS License Screens for Your App](https://www.callstack.com/blog/react-native-legal-acknowledge-open-source-libraries-in-your-app): The Callstack team introducing their recent zero-config, cross-platform library, that handles license metadata generation and in-app display for you.
+- 📦 [Re.Pack 5.1 - Preloading Remotes, Runtime Hooks, and Faster Startups](https://www.callstack.com/blog/new-in-re-pack-5-1): The release mainly focuses on a better Module Federation 2 support.
 - 📦 [TanStack Query 5.76 \- DevTools for Expo/React Native](https://github.com/TanStack/query/releases/tag/v5.76.0)
 - 📦 [Radon IDE 1.6 \- React Profiler integration, conditional & expression breakpoints, ​Expo SDK 53](https://github.com/software-mansion/radon-ide/releases/tag/v1.6.0)
 - 📦 [React Native Skia 2.0 \- React 19 and React Native 0.78 minimum are required](https://github.com/Shopify/react-native-skia/releases/tag/v2.0.0)
@@ -130,7 +130,7 @@ Interesting to see how RN is used at the highest enterprise level on platforms w
 - 📜 [How V8 JavaScript Engine Works Behind the Scenes](https://www.deepintodev.com/blog/how-v8-javascript-engine-works-behind-the-scenes)
 - 📜 [The Art of Accessibility](https://playfulprogramming.com/collections/art-of-accessibility)
 - 📜 [Making a new form control \- with Custom Elements](https://plainvanillaweb.com/blog/articles/2025-05-09-form-control/)
-- 📦 [Lightning CSS 1.30 \- Relative color spec, nesting spec for pseudo elements](https://github.com/parcel-bundler/lightningcss/releases/tag/v1.30.0)
+- 📦 [Lightning CSS 1.30 \- Relative color spec, nesting spec for pseudo elements, build support on Android, and more](https://github.com/parcel-bundler/lightningcss/releases/tag/v1.30.0)
 
 ---
 
