--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /234
-title: "This Week In React #234: TanStack DB, TanStack Query, React Router, Vite, Redux Toolkit, Parcel | 0.80 RC, Expo, RN Legal, Re.Pack, Skia 2.0, Radon IDE, Rive RN | Rslib, Lightning CSS, shape(), Accessibility"
+title: "This Week In React #234: TanStack DB, TanStack Query, React Router, Vite, Redux Toolkit, Parcel | 0.80 RC, Expo, Legal, Re.Pack, Skia, Radon IDE, Rive | Rslib, Composites, Lightning CSS, Accessibility, V8, CSS"
 authors: [tboba, kacperkapusciak]
 date: 05-14-2025
-unlisted: true
 ---
 
 Hi everyone!
