--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /234
-title: "This Week In React #234: TanStack DB, TanStack Query, React Router, Vite, Redux Toolkit, Parcel | 0.80 RC, Expo, Legal, Re.Pack, Skia, Radon IDE, Rive | Rslib, Composites, Lightning CSS, Accessibility, V8, CSS"
+title: "This Week In React #234: TanStack DB, TanStack Query, React Router, Vite, Redux Toolkit, Parcel | 0.80 RC, Expo, Legal, Re.Pack, Skia, Radon IDE, Rive | Rslib, Composites, Lightning CSS, Accessibility, V8"
 authors: [tboba, kacperkapusciak]
 date: 05-14-2025
 ---
