--- a/website/newsletter/235/index.mdx
+++ b/website/newsletter/235/index.mdx
@@ -24,8 +24,8 @@ import Support from "../_support.mdx";
 
 **[Cut React Code Review Time & Bugs in Half](https://www.coderabbit.ai?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_mar25)**
 
-Code reviews are critical but time-consuming. CodeRabbit acts as your AI co-pilot, providing instant Code review comments and potential impacts of every pull request.   
-  
+Code reviews are critical but time-consuming. CodeRabbit acts as your AI co-pilot, providing instant Code review comments and potential impacts of every pull request. 
+
 Beyond just flagging issues, CodeRabbit provides one-click fix suggestions and lets you define custom code quality rules using AST Grep patterns, catching subtle issues that traditional static analysis tools might miss.
 
 CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million repositories, and used by 50 thousand Open-source projects. CodeRabbit is free for all open-source repo's. [Get started today!](https://www.coderabbit.ai?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_mar25)
@@ -37,7 +37,7 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 <Todo />
 
 - 💸 [Product for Engineers - What engineers get wrong about communication](https://go.posthog.com/twir-may21)
-- 💸 [🔥 Full-Stack Upgrade – Build real apps with auth, orgs & file uploads: The Road to Next is your next step as a full-stack React developer.](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1)
+- 💸 [Full-Stack Upgrade – Build real apps with auth, orgs & file uploads: The Road to Next is your next step as a full-stack React developer.](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1)
 
 <SubscribeFormEmbed placement="middle" />
 
