--- a/website/newsletter/235/index.mdx
+++ b/website/newsletter/235/index.mdx
@@ -40,7 +40,7 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 
 The React Router team unveiled a preview of React Server Components support using the Parcel bundler. Stable support is blocked until Vite officially supports RSCs, but the good news is that React Router is becoming more framework-agnostic, and they expect to support other bundlers in the future with minimal effort.
 
-The feature is designed to be both incrementally adoptable by returning JSX in loaders/actions, but also to feel good on new greenfield projects looking to go all-in with Server Component Routes, `’use client’` and `’use server’` directives. They also explain how to solve N+1 query problems in RSCs (inspired by GraphQL / DataLoader).
+The feature is designed to be both incrementally adoptable by returning JSX in loaders/actions, but also to feel good on new greenfield projects looking to go all-in with Server Component Routes, `’use client’` and `’use server’` directives. They also explain how to solve the N+1 query problem in RSCs, inspired by GraphQL/DataLoader.
 
 ---
 
