--- a/website/newsletter/235/index.mdx
+++ b/website/newsletter/235/index.mdx
@@ -102,22 +102,38 @@ With 250+ cloud data integrations, a **React and React Native SDK**, **plus a cl
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
-
-- 💸[Radon IDE – All-in-one tool for React Native & Expo development. Meet the Radon IDE team next week at App.js Conf!](https://ide.swmansion.com/?utm_source=thisweekinreact.com)
+- 💸 [Radon IDE – All-in-one tool for React Native & Expo development. Meet the Radon IDE team next week at App.js Conf!](https://ide.swmansion.com/?utm_source=thisweekinreact.com)
+- 🐦 [Fortnite is back on the App Store in the U.S. on iPhones and iPads... and on the Epic Games Store and AltStore in the E.U\!](https://x.com/Fortnite/status/1924949632628523199): Major news for the whole mobile industry, Apple is finally complying with the court ruling, and allows mobile apps to use alternative web-based payment methods to bypass the 30% fee on in-app purchases.
+- 🐦 [Airbnb Lava preview](https://x.com/ramon_fritsch/status/1922358206862397478): Not open source yet, but Airbnb invented a new lightweight media format to embed animations and micro-interaction icons across platforms. A possible successor of Lottie?
+- 📜 [Real-time audio processing with Expo and native code](https://expo.dev/blog/real-time-audio-processing-with-expo-and-native-code)
+- 📜 [Expo \+ IoT: Device provisioning with HTTPS via WiFi](https://expo.dev/blog/expo-iot-device-provisioning-with-https-via-wifi)
+- 📜 [How to Run LLMs on-device in React Native with Vercel AI SDK](https://www.callstack.com/blog/meet-react-native-ai-llms-running-on-mobile-for-real)
+- 📦 [Lynx 3.2 \- Testing Library, new CSS features, improve microtasks and console support](https://lynxjs.org/blog/lynx-3-2.html)
+- 📦 [React Native Skia 2.0.1 \- Wide gamut colors on iOS](https://github.com/Shopify/react-native-skia/releases/tag/v2.0.1)
+- 🎥 [Beto \- How to upgrade from Expo SDK 52 to 53](https://www.youtube.com/watch?v=HBPyP4OxVgs)
+- 🎥 [Simon Grimm \- React Native Drawer Navigation with Expo Router](https://www.youtube.com/watch?v=65xmaJNpZVY)
+- 🎙️ [Rocket Ship 69 \- Expo Router v5, Skia WebGPU, App Updates & Galaxies Lifetime](https://share.transistor.fm/s/51ee3a99)
+- 🎙️ [React Native Radio 332 \- Codemagic \+ React Native with Martin Remmelgas](https://infinite.red/react-native-radio/rnr-332-codemagic-react-native-with-martin-remmelgas)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [TC39 \- Agenda for the 108th meeting](https://github.com/tc39/agendas/blob/main/2025/05.md): Next week, another set of interesting proposals for JS could progress, some of them could become part of the standard: `using` keyword, `Error.isError()`.
+- 📜 [JavaScript's New Superpower: Explicit Resource Management](https://v8.dev/features/explicit-resource-management): Describes the `using` keyword mentioned above, already available in Chrome, and more importantly, in Node 24\.
+- 📜 [The Future of MCP is GraphQL](https://www.apollographql.com/blog/the-future-of-mcp-is-graphql): Apollo announcing their MCP server, explaining the alignment between GraphQL and AI needs.
+- 📜 [I think the ergonomics of generators is growing on me](https://macarthur.me/posts/generators/)
+- 📜 [Reports of Deno's Demise Have Been Greatly Exaggerated](https://deno.com/blog/greatly-exaggerated)
+- 📦 [Node 22.16 \- `node.config.json` support (experimental)](https://nodejs.org/en/blog/release/v22.16.0)
+- 📦 [Zod 4.0 \- faster, slimmer, more tsc-efficient, new Zod Mini export, localization and more](https://zod.dev/v4)
+- 📦 [Remotion Media Parser \- Universal lib based on WebCodecs to parse/decode/encode videos](https://www.remotion.dev/blog/media-parser)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/235/meme.jpg)](https://x.com/copyjosh/status/1924294150905614762)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/235/meme2.jpg)](https://x.com/sebastienlorber/status/1922935190080372837)
 
 See ya! 👋
