--- a/website/newsletter/235/index.mdx
+++ b/website/newsletter/235/index.mdx
@@ -11,6 +11,8 @@ This week, we're delighted to finally have a preview of React Server Components 
 
 The React Native ecosystem is surprisingly calm, but no doubt they keep everything secret for [App.js Conf](https://appjs.co/) next week!
 
+By the way, I would really appreciate your support. Now that I'm automatically removing cold subscribers, the newsletter is decreasing over time 😅. Any retweet, like, engagement, or testimonial really helps me! Please convince your friends to subscribe ❤️
+
 <!-- truncate -->
 
 import Support from "../_support.mdx";
