--- a/website/newsletter/236/index.mdx
+++ b/website/newsletter/236/index.mdx
@@ -26,14 +26,10 @@ import Support from "../_support.mdx";
 
 AG Charts is a canvas-based charting library from AG Grid. Initially built to power [AG Grids](https://www.ag-grid.com/react-table?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-1) Integrated Charts, AG Charts now has over **1 million** npm downloads/month:
 
-*   🆓 **Free:** Access a range of chart types, including **bar**, **line**, **scatter**, **area**, and more – completely **free**, forever.
-    
-*   🚀 **Fast:** Using **batch drawing** and advanced change detection alongside the **offscreen canvas API**, AG Charts can easily render hundreds of thousands of data points out of the box
-    
-*   📊 **Financial Charts:** Build interactive financial charts featuring advanced annotations with just 3 lines of code.
-    
-*   🏢 **Enterprise Features:** Upgrade to Enterprise to unlock advanced capabilities such as animations, context menus, crosshairs and more. Try it for free, no trial license required.
-    
+- 🆓 **Free:** Access a range of chart types, including **bar**, **line**, **scatter**, **area**, and more – completely **free**, forever.
+- 🚀 **Fast:** Using **batch drawing** and advanced change detection alongside the **offscreen canvas API**, AG Charts can easily render hundreds of thousands of data points out of the box
+- 📊 **Financial Charts:** Build interactive financial charts featuring advanced annotations with just 3 lines of code.
+- 🏢 **Enterprise Features:** Upgrade to Enterprise to unlock advanced capabilities such as animations, context menus, crosshairs and more. Try it for free, no trial license required.
 
 Learn More: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-1)
 
@@ -57,16 +53,11 @@ Learn More: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=t
 
 Learn how to build a complete billing experience with Clerk—no custom UI, webhooks, or Stripe session management required.
 
-*   Create a pricing page with the `<PricingTable />` component
-    
-*   Connect with Stripe—no manual API calls, no manual syncing
-    
-*   Manage plans and entitlements all within the Clerk dashboard
-    
-*   `has()` helper to control access based on a customer’s plan, features, and permissions
-    
-*   Manage user and subscription data all in one place
-    
+- Create a pricing page with the `<PricingTable />` component
+- Connect with Stripe—no manual API calls, no manual syncing
+- Manage plans and entitlements all within the Clerk dashboard
+- `has()` helper to control access based on a customer’s plan, features, and permissions
+- Manage user and subscription data all in one place
 
 Enable Billing, drop in `<PricingTable/>` on your `/pricing` page and [start monetizing your application](https://go.clerk.com/LphCouG).
 
