--- a/website/newsletter/236/index.mdx
+++ b/website/newsletter/236/index.mdx
@@ -38,7 +38,7 @@ Learn More: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=t
 ## ⚛️ React {#react}
 
 - 💸 [Product for Engineers - This is why you're not shipping](https://go.posthog.com/twir-may28)
-- 💸 [The Road to Next - Your next step as a full-stack React developer - Build real apps with auth, orgs & file uploads](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
+- 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
 
 <SubscribeFormEmbed placement="middle" />
 
