--- a/website/newsletter/236/index.mdx
+++ b/website/newsletter/236/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /236
-title: "This Week In React #236: Remix, TanStack Router, RSC, RedwoodSDK, React Router, Docusaurus, TanStack Query | EAS Hosting, Executorch, RN Screens, Radon IDE, Flashlist, Reanimated | Temporal TypeScript, ESlint, SolidJS, tsdown..."
+title: "This Week In React #236: Remix, TanStack, RSC, RedwoodSDK, React Router, Docusaurus | EAS Hosting, Executorch, RN Screens, Radon IDE, Flashlist, Reanimated | Temporal TypeScript, ESlint, SolidJS, tsdown..."
 authors: [cyrilbo, matthieugicquel]
 date: 05-28-2025
 unlisted: true
@@ -56,7 +56,6 @@ Their goal with Remix v3 is “reimagining what a web framework can be”. The p
 ---
 
 - 💸 [Product for Engineers - This is why you're not shipping](https://go.posthog.com/twir-may28)
-- 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
 - 📜 [The Beauty of TanStack Router](https://tkdodo.eu/blog/the-beauty-of-tan-stack-router): Dominik goes through the features that differentiate Tanstack Router: Type-safe routing with StrictOrFrom principle, Search Param State Management, File-Based Routing, and Suspense support.
 - 📜 [Composing Server and Client Components: The Modern React's Superpower](https://www.epicreact.dev/composing-server-and-client-components-the-modern-reacts-superpower-08yn9): RSC contrasts sharply with the old days of script tags and global variables.
 - 📜 [Mastering Focus Management in React with \`flushSync\`](https://www.epicreact.dev/mastering-focus-management-in-react-with-flush-sync-f5b38): If you try to focus something (eg an input) before React has actually committed it to the DOM, it won’t work, unless you use `flushSync`
@@ -66,6 +65,7 @@ Their goal with Remix v3 is “reimagining what a web framework can be”. The p
 - 📜 [How to Debounce Loaders and Actions in React Router](https://sergiodxa.com/tutorials/debounce-loaders-and-actions-in-react-router)
 - 📜 [Understanding Hydration Errors by building a SSR React Project](https://www.propelauth.com/post/understanding-hydration-errors)
 - 📜 [Why Composition Beats Inheritance In React](https://thetshaped.dev/p/why-composition-beats-inheritance-react-projects-extensible-components)
+- 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
 - 📦 [Docusaurus 3.8](https://docusaurus.io/blog/releases/3.8): Continues the work on faster builds, adds support for CSS Cascade layers, both behind a new “future flags” system.
 - 📦 [TanStack Query v5.77](https://github.com/TanStack/query/releases/tag/v5.77.0): Adds `maxChunks` to keep in the cache for streamed queries.
 - 🎥 [TanStack is Slowly Taking Over React](https://www.youtube.com/watch?v=u10Zlg_Un8I)
@@ -96,7 +96,6 @@ Enable Billing, drop in `<PricingTable/>` on your `/pricing` page and [start mon
 ## 📱 React-Native {#react-native}
 
 - 💸 [EAS Workflows is the standard for React Native CI/CD. Spend less time thinking about CI and more time building features.](https://expo.dev/eas/workflows?utm_source=twir+newsletter&utm_medium=email&utm_campaign=twir-workflows&utm_id=TWIR)
-- 🐦 [Replit has updated its template to Expo SDK 53](https://x.com/mattppal/status/1922653683424330061)
 - 📜 [Incremental EAS Hosting changes](https://expo.dev/changelog/incremental-eas-hosting-changes)
 - 📦 [RN Executorch 0.4.1 \- ​​More LLMs, tool calling, text embeddings, multilingual speech-to-text and OCR, and image segmentation](https://github.com/software-mansion/react-native-executorch/releases/tag/v0.4.1)
 - 📦 [RN Screens 4.11 \- react-native-edge-to-edge integration, \`pageSheet\` presentation](https://github.com/software-mansion/react-native-screens/releases/tag/4.11.0)
